streaming-platform/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-route
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: streaming-gateway
      namespace: streaming
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /grafana
